--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>This is a Header</h1>
-        <p>This is a paragraph.</p>
-        <p>This is a another paragraph.</p>
-        <p>Hellow World!</p>
-    </body>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <title>Encounter Generator</title>
+</head>
+
+<body>
+
+    <header>
+        <div>
+            <h1>D&D 5E ENCOUNTER GENERATOR</h1>
+            <h2>IF WE'RE GONNA FIGHT, LET'S DO IT RIGHT</h2>
+        </div>
+    </header>
+
+    <div>
+        <h2>Discover & Review</h2>
+        <h3>Our Campsites</h3>
+        <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+    </div>
+
+    <footer>
+        <div>
+            <h5>Social</h5>
+            <a href="http://instagram.com/">Instagram</a>
+            <a href="http://facebook.com/">Facebook</a>
+            <a href="http://twitter.com/">Twitter</a>
+            <a href="http://youtube.com/">YouTube</a>
+        </div>
+        <div>
+            Tel: 555-555-5555<br />
+            Email: weaintfriends@yet.com
+        </div>
+    </footer>
+
+    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
